--- a/TCPServer/TCPServer.vcxproj.filters
+++ b/TCPServer/TCPServer.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="PacketMaker.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MyUtility.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Packet.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PacketMaker.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MyUtility.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
